src/styl/square-end-screen.styl
@import "vars.styl";

$square-campaign-container-background-color = #dedede;

#end-screen.square-end-screen {
  .campaign-container {
    position: relative;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    background-color: $square-campaign-container-background-color;
  }

  .privacy-button {
    bottom: 0;
    left: 0;
  }

  .game-image {
    width: 100%;
    height: 100%;
    background-color: transparent;
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
  }

  .game-background-blurred {
    position: absolute;
    display: block;
    margin: 0;
    width: 100%;
    height: 100%;
    filter: blur(10px) brightness(.8) opacity(.28) grayscale(1);
    transform: scale(1.4);
    background-color: transparent;
    background-size: cover;
  }

  &.old-androids {
    .game-background-blurred {
      display: none;
    }

    .game-image {
      background-color: $light-gray;
    }
  }

  .end-screen-info-background {
    position: relative;
    z-index: 6;
    flex-grow: 1;
    width: auto;
    background-color: $end-screen-background-color;
  }
}

&.landscape #end-screen.square-end-screen {
  .campaign-container {
    flex-direction: row;
  }

  .privacy-button {
    left: 0;
  }
}

/* Font size fixes to the end-screen.styl media queries */

html #end-screen.square-end-screen .end-screen-info-background {
  @media (orientation: portrait) {
    @media (min-height: 0) {
      font-size: $default-px-size * .3;
    }

    @media (min-height: 250px) {
      font-size: $default-px-size * .4;
    }

    @media (min-height: 320px) {
      font-size: $default-px-size * .6;
    }

    @media (min-height: 380px) {
      font-size: $default-px-size * .7;
    }

    @media (min-height: 460px) {
      font-size: $default-px-size * .9;
    }

    @media (min-height: 560px) {
      font-size: $default-px-size * 1.1;
    }

    @media (min-height: 600px) {
      font-size: $default-px-size * 1.2;
    }

    @media (min-height: 680px) {
      font-size: $default-px-size * 1.3;
    }

    @media (min-height: 780px) {
      font-size: $default-px-size * 1.4;
    }

    @media (min-height: 980px) {
      font-size: $default-px-size * 1.6;
    }

    @media (min-height: 1050px) {
      font-size: $default-px-size * 1.8;
    }

    @media (min-height: 1175px) {
      font-size: $default-px-size * 2.2;
    }

    @media (min-height: 1375px) {
        font-size: $default-px-size * 2.6;
    }

    @media (min-height: 1675px) {
      font-size: $default-px-size * 3;
    }

    @media (min-height: 1975px) {
      font-size: $default-px-size * 4;
    }

    @media (min-height: 2275px) {
      font-size: $default-px-size * 4.6;
    }

    @media (min-height: 2575px) {
      font-size: $default-px-size * 5.5;
    }

    @media (min-height: 2875px) {
      font-size: $default-px-size * 6.2;
    }

    @media (min-height: 3475px) {
      font-size: $default-px-size * 7;
    }
  }

  @media (orientation: landscape) {
      @media (min-width: 200px) {
        font-size: $default-px-size * .5;
      }

      @media (min-width: 320px) {
        font-size: $default-px-size * .6;
      }

      @media (min-width: 460px) {
        font-size: $default-px-size * .9;
      }

      @media (min-width: 580px) {
        font-size: $default-px-size * 1.2;
      }

      @media (min-width: 760px) {
        font-size: $default-px-size * 1.4;
      }

      @media (min-width: 960px) {
        font-size: $default-px-size * 1.6;
      }

      @media (min-width: 1160px) {
        font-size: $default-px-size * 2.2;
      }

      @media (min-width: 1460px) {
        font-size: $default-px-size * 2.8;
      }

      @media (min-width: 1760px) {
        font-size: $default-px-size * 3.4;
      }

      @media (min-width: 2260px) {
        font-size: $default-px-size * 4.4;
      }
  }
}

/** Styles for devices that can show the full sized image without blurred background **/

@media (max-aspect-ratio: 290/460) and (orientation: portrait), (min-aspect-ratio: 470/290) and (orientation: landscape) {
  #end-screen.square-end-screen {
    .game-background-blurred {
      display: none;
    }

    /* Fixes issue of the image not showing up on Nexus 5 (4.4) in portrait mode */
    .game-image {
      position: absolute;
    }
  }
}

@media (max-aspect-ratio: 290/460 ) and (orientation: portrait) {
  body {
    &.portrait #end-screen.square-end-screen {
      .end-screen-info-background {
        height: auto;
      }

      .download-container {
        margin: .55rem auto;
      }
    }
  }

  #end-screen.square-end-screen {
    .game-background-container {
      position: relative;
      z-index: 5;
      width: 100%;
      height: 100vw;
    }

    .end-screen-info-background {
      height: auto;
    }
  }
}

@media (min-aspect-ratio: 470/290) and (orientation: landscape) {
  &.landscape #end-screen.square-end-screen {
    .game-background-container {
      width: 100vh;
      height: 100%;
    }

    .end-screen-info-background {
      width: auto;
    }
  }
}

/* iPhone X fixes */
@media only screen and (device-width : 375px) and (device-height : 812px) and (-webkit-device-pixel-ratio : 3) {
  &.landscape #end-screen.square-end-screen {
    .game-image {
      background-position: left;
    }

    .privacy-button {
      left: -14px;
    }

    .download-container {
      font-size: 1.05rem;
    }

    .game-rating, .name-container {
      font-size: 1.2rem;
    }
  }
}

/* iPhone XS Max */
@media only screen and (device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) {
  &.landscape #end-screen.square-end-screen {
    .game-image {
      background-position: left;
    }

    .privacy-button {
      left: -14px;
    }

    .download-container {
      font-size: 1.05rem;
    }

    .game-rating, .name-container {
      font-size: 1.2rem;
    }
  }
}

/* iPhone XR */
@media only screen and (device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) {
  &.landscape #end-screen.square-end-screen {
    .game-image {
      background-position: left;
    }

    .privacy-button {
      left: -14px;
    }

    .download-container {
      font-size: 1.05rem;
    }

    .game-rating, .name-container {
      font-size: 1.2rem;
    }
  }
}

